--- a/index.html
+++ b/index.html
@@ -2,32 +2,140 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Cadastro com Busca de CEP</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Biblioteca de máscara -->
-  <script src="https://unpkg.com/imask"></script>
+  <title>Cadastro de Membro</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="container mt-5">
+<body>
 
-  <h2>Cadastro de Endereço</h2>
-
-  <form>
-    <div class="mb-3">
-      <label for="cep" class="form-label">CEP:</label>
-      <input type="text" class="form-control" id="cep" placeholder="00000-000"
-             maxlength="9" oninput="buscarCEP()" onblur="buscarCEP()">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Cadastro da Igreja</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">Cadastro</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="listagem.html">Listagem</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="aniversariantes.html">Aniversariantes</a>
+          </li>
+        </ul>
+      </div>
     </div>
+  </nav>
 
-    <div class="mb-3">
-      <label for="endereco" class="form-label">Endereço:</label>
-      <input type="text" class="form-control" id="endereco" placeholder="Endereço completo" readonly>
-    </div>
+  <div class="container form-container my-4">
+    <h2 class="text-center mb-6">Cadastro de Membro</h2>
+    <form id="form-membro">
+      
+      <div class="text-center mb-6">
+        <img id="preview" alt="Prévia da Foto">
+        <div class="mt-3">
+          <label class="btn-upload">
+            <i class="fas fa-camera mr-2"></i>
+            Selecionar/Tirar Foto
+            <input type="file" id="foto" accept="image/*" class="d-none" required>
+          </label>
+        </div>
+      </div>
 
-    <!-- Adicione mais campos conforme o seu formulário -->
-  </form>
+      <div class="form-grid">
+        <!-- Coluna 1 -->
+        <div>
+          <label for="nome" class="form-label required-field">Nome Completo</label>
+          <div class="relative">
+            <input type="text" id="nome" name="nome" class="form-control" required placeholder="Digite o nome completo">
+            <i class="fas fa-user input-icon"></i>
+          </div>
+        </div>
 
-  <!-- Arquivo JavaScript do projeto -->
-  <script src="app.js"></script>
+        <!-- Coluna 2 -->
+        <div>
+          <label for="endereco" class="form-label required-field">Endereço</label>
+          <div class="relative">
+            <input type="text" id="endereco" name="endereco" class="form-control" required placeholder="Digite o endereço completo">
+            <i class="fas fa-map-marker-alt input-icon"></i>
+          </div>
+        </div>
+
+        <!-- Coluna 1 -->
+        <div>
+          <label for="batismo" class="form-label required-field">Data de Batismo</label>
+          <div class="relative">
+            <input type="date" id="batismo" name="batismo" class="form-control" required>
+            <i class="fas fa-calendar-check input-icon"></i>
+          </div>
+        </div>
+
+        <!-- Coluna 2 -->
+        <div>
+          <label for="nascimento" class="form-label required-field">Data de Nascimento</label>
+          <div class="relative">
+            <input type="date" id="nascimento" name="nascimento" class="form-control" required>
+            <i class="fas fa-birthday-cake input-icon"></i>
+          </div>
+        </div>
+
+        <!-- Função (ocupa duas colunas em desktop) -->
+        <div>
+          <label for="funcao" class="form-label required-field">Função</label>
+          <div class="relative">
+            <select id="funcao" name="funcao" class="form-control" required>
+              <option value="">Selecione a função</option>
+              <option value="membro">Membro</option>
+              <option value="diacono">Diácono</option>
+              <option value="pastor">Pastor</option>
+            </select>
+            <i class="fas fa-user-tag input-icon"></i>
+          </div>
+        </div>
+
+        <!-- Campo Telefone -->
+        <div class="mb-4">
+          <label for="telefone" class="form-label required-field">Telefone</label>
+          <div class="relative">
+            <input type="text" id="telefone" name="telefone" class="form-control" required 
+                   placeholder="(00) 00000-0000" maxlength="15">
+            <i class="fas fa-phone input-icon"></i>
+          </div>
+        </div>
+
+         <!-- Campo Sexo -->
+        <div class="mb-4">
+          <label class="form-label required-field">Sexo</label>
+          <div class="radio-group">
+            <label class="radio-option">
+              <input type="radio" name="sexo" value="masculino" required>
+              <span class="radio-custom"></span>
+              Masculino
+            </label>
+            <label class="radio-option">
+              <input type="radio" name="sexo" value="feminino">
+              <span class="radio-custom"></span>
+              Feminino
+            </label>
+          </div>
+        </div>
+        
+      </div>
+
+      <div class="text-center">
+        <button type="submit" class="btn btn-primary px-4">
+          Cadastrar Membro
+        </button>
+      </div>
+    </form>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
