--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <!-- Biblioteca de máscara -->
+  <script src="https://unpkg.com/imask"></script>
 </head>
 <body>
 
@@ -56,6 +58,16 @@
             <i class="fas fa-user input-icon"></i>
           </div>
         </div>
+
+        <!-- Campo CEP -->
+        <div>
+          <label for="cep" class="form-label required-field">CEP</label>
+          <div class="relative">
+            <input type="text" id="cep" name="cep" class="form-control" required placeholder="00000-000" maxlength="9" oninput="buscarCEP()" onblur="buscarCEP()">
+            <i class="fas fa-map-marker-alt input-icon"></i>
+          </div>
+        </div>
+
 
         <!-- Coluna 2 -->
         <div>
