--- a/index.html
+++ b/index.html
@@ -175,5 +175,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="app.js"></script>
+  <script type="module" src="auth-guard.js"></script>
 </body>
 </html>
