--- a/login.html
+++ b/login.html
@@ -2,38 +2,83 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Login</title>
+  <title>Login - Sistema Igreja</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-auth.js"></script>
-  <script src="firebase-config.js"></script>
+  <script type="module" src="firebase-config.js"></script>
+
+  <style>
+    body {
+      background: linear-gradient(135deg, #2c3e50, #3498db);
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .card {
+      background-color: #fff;
+      color: #333;
+      border-radius: 8px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.2);
+      padding: 30px;
+      width: 100%;
+      max-width: 400px;
+    }
+    .form-control {
+      margin-bottom: 15px;
+    }
+    .btn-primary {
+      width: 100%;
+    }
+    .error {
+      color: red;
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
-  <h2>Login</h2>
-  <form id="loginForm">
-    <input type="email" id="email" placeholder="E-mail" required><br>
-    <input type="password" id="password" placeholder="Senha" required><br>
-    <button type="submit">Entrar</button>
-  </form>
 
-  <p id="mensagem"></p>
+  <div class="card">
+    <h3 class="text-center mb-4">Login do Sistema</h3>
+    <form id="loginForm">
+      <input type="email" id="email" class="form-control" placeholder="E-mail" required>
+      <input type="password" id="password" class="form-control" placeholder="Senha" required>
+      <button type="submit" class="btn btn-primary">Entrar</button>
+      <div id="errorMsg" class="error"></div>
+    </form>
+  </div>
 
   <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.24.0/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.24.0/firebase-auth.js";
+    import { firebaseConfig } from "./firebase-config.js";
 
-    const auth = getAuth();
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
 
-    document.getElementById('loginForm').addEventListener('submit', function(e) {
+    const form = document.getElementById("loginForm");
+    const errorMsg = document.getElementById("errorMsg");
+
+    form.addEventListener("submit", (e) => {
       e.preventDefault();
+      const email = document.getElementById("email").value.trim();
+      const password = document.getElementById("password").value;
 
-      const email = document.getElementById('email').value;
-      const senha = document.getElementById('password').value;
-
-      signInWithEmailAndPassword(auth, email, senha)
+      signInWithEmailAndPassword(auth, email, password)
         .then((userCredential) => {
-          window.location.href = "index.html"; // redireciona para o sistema
+          // ✅ Redireciona após login
+          window.location.href = "index.html"; // ou /cadastro/index.html se necessário
         })
         .catch((error) => {
-          document.getElementById('mensagem').textContent = "Erro: " + error.message;
+          errorMsg.textContent = "Erro: " + (error.message || "Não foi possível fazer login.");
         });
     });
   </script>
