--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
   <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js"></script>
-  <script type="module" src="/firebase-config.js"></script>
+  <script type="module" src="./firebase-config.js"></script>
 
   <style>
     body {
