--- a/listagem.html
+++ b/listagem.html
@@ -6,9 +6,7 @@
   <title>Lista de Membros</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
-    body {
-      padding-top: 70px;
-    }
+    body { padding-top: 70px; }
     .foto-miniatura {
       width: 50px;
       height: 50px;
@@ -37,11 +35,11 @@
 </head>
 <body>
 
-<!-- 🔹 SCRIPT DE VERIFICAÇÃO DE AUTENTICAÇÃO -->
+<!-- 🔒 Verificação de autenticação -->
 <script type="module">
   import { checkAuth } from './auth.js';
   import { isUserAdmin } from './users.js';
-  
+
   document.addEventListener('DOMContentLoaded', async () => {
     const user = await checkAuth();
     if (user && await isUserAdmin()) {
@@ -59,16 +57,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-user-plus me-1"></i> Cadastro</a></li>
-        <li class="nav-item"><a class="nav-link active" href="listagem.html"><i class="fas fa-list me-1"></i> Listagem</a></li>
-        <li class="nav-item"><a class="nav-link" href="aniversariantes.html"><i class="fas fa-birthday-cake me-1"></i> Aniversariantes</a></li>
-        <li class="nav-item" id="adminMenuItem" style="display: none;"><a class="nav-link" href="register.html"><i class="fas fa-user-shield me-1"></i> Cadastrar Usuários</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Cadastro</a></li>
+        <li class="nav-item"><a class="nav-link active" href="listagem.html">Listagem</a></li>
+        <li class="nav-item"><a class="nav-link" href="aniversariantes.html">Aniversariantes</a></li>
+        <li class="nav-item" id="adminMenuItem" style="display: none;"><a class="nav-link" href="register.html">Cadastrar Usuários</a></li>
       </ul>
       <div class="d-flex align-items-center">
-        <span class="navbar-text text-white me-3" id="currentUserDisplay">
-          <i class="fas fa-user-circle me-1"></i> <span>Carregando...</span>
-        </span>
-        <button id="logoutBtn" class="btn btn-sm btn-outline-light"><i class="fas fa-sign-out-alt me-1"></i> Sair</button>
+        <span class="navbar-text text-white me-3"><i class="fas fa-user-circle me-1"></i> <span>Carregando...</span></span>
+        <button id="logoutBtn" class="btn btn-sm btn-outline-light">Sair</button>
       </div>
     </div>
   </div>
@@ -77,7 +73,6 @@
 <!-- 🔹 Conteúdo -->
 <div class="container mt-4">
 
-  <!-- Botões -->
   <div class="mb-3 d-flex justify-content-between">
     <div>
       <button id="btnSelecionar" class="btn btn-secondary">Selecionar Cadastros</button>
@@ -86,11 +81,10 @@
     <button id="btnExcluir" class="btn btn-danger d-none">Excluir Selecionados</button>
   </div>
 
-  <!-- Lista -->
   <div id="lista-membros" class="list-group"></div>
 </div>
 
-<!-- 🔹 Firebase e lógica -->
+<!-- 🔹 Firebase + lógica -->
 <script type="module">
   import { db } from './firebase-config.js';
   import { ref, onValue, remove } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
@@ -99,7 +93,6 @@
   const btnSelecionar = document.getElementById("btnSelecionar");
   const btnExcluir = document.getElementById("btnExcluir");
   let modoSelecao = false;
-
   const membrosRef = ref(db, "membros");
 
   function carregarMembros(data) {
@@ -146,7 +139,7 @@
   btnExcluir.addEventListener("click", () => {
     const selecionados = document.querySelectorAll(".checkbox-selecao:checked");
     if (selecionados.length === 0) return alert("Nenhum cadastro selecionado.");
-    if (!confirm("Tem certeza que deseja excluir os cadastros selecionados?")) return;
+    if (!confirm("Deseja excluir os cadastros selecionados?")) return;
 
     selecionados.forEach(cb => {
       const id = cb.getAttribute("data-id");
@@ -158,12 +151,14 @@
     const data = snapshot.val();
     carregarMembros(data);
   });
+</script>
 
-  // Exportar PDF
-  document.getElementById("btnExportarPDF").addEventListener("click", async () => {
-    const doc = new window.jspdf.jsPDF();
+<!-- 🔹 Exportar PDF -->
+<script>
+  document.getElementById("btnExportarPDF").addEventListener("click", () => {
+    const doc = new window.jsPDFGlobal();
 
-    const logoUrl = "./logo.png"; // substitua pelo caminho real
+    const logoUrl = "./logo.png"; // coloque o caminho correto da sua logo
     const img = new Image();
     img.crossOrigin = "anonymous";
     img.src = logoUrl;
@@ -182,10 +177,7 @@
           const { ref, get, child } = firebase;
 
           get(child(ref(db), "membros")).then(snapshot => {
-            if (!snapshot.exists()) {
-              alert("Nenhum membro encontrado.");
-              return;
-            }
+            if (!snapshot.exists()) return alert("Nenhum membro encontrado.");
 
             const data = snapshot.val();
             const membrosArray = Object.values(data).map(m => ([
@@ -194,11 +186,10 @@
               m.cidade || "", m.estado || ""
             ]));
 
-            // Aqui usamos jsPDF.autoTable diretamente
-            window.jspdfAutoTable(doc, {
+            doc.autoTable({
               startY: cabecalhoY,
               head: [[
-                "Nome", "Nascimento", "Sexo", "Telefone", "Função", 
+                "Nome", "Nascimento", "Sexo", "Telefone", "Função",
                 "Batismo", "Endereço", "Bairro", "Cidade", "Estado"
               ]],
               body: membrosArray,
@@ -211,16 +202,16 @@
       });
     };
   });
-
 </script>
 
-<!-- Bibliotecas externas -->
+<!-- 🔹 Bibliotecas externas -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-  // Registra corretamente autoTable global
-  window.jspdfAutoTable = window.jspdf?.jsPDF?.API?.autoTable;
+  // Inicializa corretamente jsPDF e autoTable
+  window.jsPDFGlobal = window.jspdf.jsPDF;
 </script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
