--- a/listagem.html
+++ b/listagem.html
@@ -1,177 +1,27 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Lista de Membros</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <style>
-    body { padding-top: 70px; }
-    .foto-miniatura {
-      width: 50px;
-      height: 50px;
-      object-fit: cover;
-      border-radius: 50%;
-      margin-right: 10px;
-    }
-    .membro-item {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 10px;
-      border-bottom: 1px solid #ddd;
-    }
-    .info-membro {
-      display: flex;
-      align-items: center;
-      text-decoration: none;
-      color: inherit;
-      flex-grow: 1;
-    }
-    .checkbox-selecao {
-      display: none;
-    }
-  </style>
-</head>
-<body>
-
-<!-- 🔒 Verificação de autenticação -->
-<script type="module">
-  import { checkAuth } from './auth.js';
-  import { isUserAdmin } from './users.js';
-
-  document.addEventListener('DOMContentLoaded', async () => {
-    const user = await checkAuth();
-    if (user && await isUserAdmin()) {
-      document.getElementById('adminMenuItem').style.display = 'block';
-    }
-  });
-</script>
-
-<!-- 🔹 Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-  <div class="container">
-    <a class="navbar-brand" href="index.html">Listagem</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Cadastro</a></li>
-        <li class="nav-item"><a class="nav-link active" href="listagem.html">Listagem</a></li>
-        <li class="nav-item"><a class="nav-link" href="aniversariantes.html">Aniversariantes</a></li>
-        <li class="nav-item" id="adminMenuItem" style="display: none;"><a class="nav-link" href="register.html">Cadastrar Usuários</a></li>
-      </ul>
-      <div class="d-flex align-items-center">
-        <span class="navbar-text text-white me-3"><i class="fas fa-user-circle me-1"></i> <span>Carregando...</span></span>
-        <button id="logoutBtn" class="btn btn-sm btn-outline-light">Sair</button>
-      </div>
-    </div>
-  </div>
-</nav>
-
-<!-- 🔹 Conteúdo -->
-<div class="container mt-4">
-
-  <div class="mb-3 d-flex justify-content-between">
-    <div>
-      <button id="btnSelecionar" class="btn btn-secondary">Selecionar Cadastros</button>
-      <button id="btnExportarPDF" class="btn btn-success">Exportar PDF</button>
-    </div>
-    <button id="btnExcluir" class="btn btn-danger d-none">Excluir Selecionados</button>
-  </div>
-
-  <div id="lista-membros" class="list-group"></div>
-</div>
-
-<!-- 🔹 Firebase + lógica -->
-<script type="module">
-  import { db } from './firebase-config.js';
-  import { ref, onValue, remove } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
-
-  const lista = document.getElementById("lista-membros");
-  const btnSelecionar = document.getElementById("btnSelecionar");
-  const btnExcluir = document.getElementById("btnExcluir");
-  let modoSelecao = false;
-  const membrosRef = ref(db, "membros");
-
-  function carregarMembros(data) {
-    lista.innerHTML = "";
-    if (!data) {
-      lista.innerHTML = "<p class='text-center'>Nenhum membro cadastrado.</p>";
-      return;
-    }
-
-    for (const id in data) {
-      const membro = data[id];
-      const item = document.createElement("div");
-      item.className = "list-group-item membro-item";
-
-      item.innerHTML = `
-        <input type="checkbox" class="form-check-input me-2 checkbox-selecao" data-id="${id}">
-        <a href="ficha.html?id=${id}" class="info-membro">
-          <img src="${membro.fotoURL || ''}" class="foto-miniatura" alt="Foto">
-          <div>
-            <div><strong>${membro.nome}</strong></div>
-            <small>${membro.funcao}</small>
-          </div>
-        </a>
-      `;
-
-      lista.appendChild(item);
-    }
-
-    atualizarVisibilidadeCheckboxes();
-  }
-
-  function atualizarVisibilidadeCheckboxes() {
-    const checkboxes = document.querySelectorAll(".checkbox-selecao");
-    checkboxes.forEach(cb => cb.style.display = modoSelecao ? "inline-block" : "none");
-    btnExcluir.classList.toggle("d-none", !modoSelecao);
-    btnSelecionar.textContent = modoSelecao ? "Cancelar Seleção" : "Selecionar Cadastros";
-  }
-
-  btnSelecionar.addEventListener("click", () => {
-    modoSelecao = !modoSelecao;
-    atualizarVisibilidadeCheckboxes();
-  });
-
-  btnExcluir.addEventListener("click", () => {
-    const selecionados = document.querySelectorAll(".checkbox-selecao:checked");
-    if (selecionados.length === 0) return alert("Nenhum cadastro selecionado.");
-    if (!confirm("Deseja excluir os cadastros selecionados?")) return;
-
-    selecionados.forEach(cb => {
-      const id = cb.getAttribute("data-id");
-      remove(ref(db, `membros/${id}`));
-    });
-  });
-
-  onValue(membrosRef, (snapshot) => {
-    const data = snapshot.val();
-    carregarMembros(data);
-  });
-</script>
-
-<!-- 🔹 Exportar PDF -->
 <script>
   document.getElementById("btnExportarPDF").addEventListener("click", () => {
-    const doc = new window.jsPDFGlobal();
+    const doc = new window.jsPDFGlobal({ orientation: "landscape", unit: "mm", format: "a4" });
 
-    const logoUrl = "./logo.png"; // coloque o caminho correto da sua logo
+    const logoUrl = "./logo.png"; // Caminho da sua logo
     const img = new Image();
     img.crossOrigin = "anonymous";
     img.src = logoUrl;
 
     img.onload = function () {
-      doc.addImage(img, 'PNG', 10, 10, 40, 20);
+      const pageWidth = doc.internal.pageSize.getWidth();
+      const logoWidth = 40; // Altere aqui se quiser um logo maior/menor
+      const logoHeight = (img.height / img.width) * logoWidth;
+      const logoX = (pageWidth - logoWidth) / 2;
+
+      // Cabeçalho
+      doc.addImage(img, 'PNG', logoX, 10, logoWidth, logoHeight);
       doc.setFontSize(14);
-      doc.text("Igreja XXX", 10, 35);
-      doc.text("Lista completa de membros", 10, 45);
+      doc.text("Igreja XXX", pageWidth / 2, 10 + logoHeight + 7, { align: "center" });
+      doc.text("Lista completa de membros", pageWidth / 2, 10 + logoHeight + 15, { align: "center" });
 
-      const cabecalhoY = 55;
+      const cabecalhoY = 10 + logoHeight + 25;
 
-      // Firebase
+      // Obter dados do Firebase
       import("./firebase-config.js").then(({ db }) => {
         import("https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js").then(firebase => {
           const { ref, get, child } = firebase;
@@ -186,6 +36,7 @@
               m.cidade || "", m.estado || ""
             ]));
 
+            // Configurar autoTable
             doc.autoTable({
               startY: cabecalhoY,
               head: [[
@@ -193,7 +44,43 @@
                 "Batismo", "Endereço", "Bairro", "Cidade", "Estado"
               ]],
               body: membrosArray,
-              styles: { fontSize: 8, cellPadding: 2 }
+              styles: { fontSize: 8, cellPadding: 2 },
+              margin: { top: cabecalhoY, bottom: 15 },
+              didDrawPage: function (data) {
+                const pageCount = doc.internal.getNumberOfPages();
+                const pageSize = doc.internal.pageSize;
+                const pageHeight = pageSize.getHeight();
+                const pageWidth = pageSize.getWidth();
+
+                const currentPage = doc.internal.getCurrentPageInfo().pageNumber;
+
+                // Rodapé
+                doc.setFontSize(8);
+                doc.text(`Página ${currentPage} de ${pageCount}`, pageWidth / 2, pageHeight - 7, { align: "center" });
+
+                const now = new Date();
+                const geradoEm = now.toLocaleString("pt-BR", {
+                  day: "2-digit", month: "2-digit", year: "numeric",
+                  hour: "2-digit", minute: "2-digit"
+                });
+                doc.text(`Gerado em: ${geradoEm}`, pageWidth - 10, pageHeight - 7, { align: "right" });
+              },
+              headStyles: {
+                fillColor: [41, 128, 185],
+                halign: 'center'
+              },
+              columnStyles: {
+                0: { cellWidth: 40 }, // Nome
+                1: { cellWidth: 25 }, // Nascimento
+                2: { cellWidth: 20 }, // Sexo
+                3: { cellWidth: 30 }, // Telefone
+                4: { cellWidth: 25 }, // Função
+                5: { cellWidth: 25 }, // Batismo
+                6: { cellWidth: 45 }, // Endereço
+                7: { cellWidth: 25 }, // Bairro
+                8: { cellWidth: 25 }, // Cidade
+                9: { cellWidth: 20 }  // Estado
+              }
             });
 
             doc.save("lista_membros.pdf");
@@ -203,15 +90,3 @@
     };
   });
 </script>
-
-<!-- 🔹 Bibliotecas externas -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
-<script>
-  // Inicializa corretamente jsPDF e autoTable
-  window.jsPDFGlobal = window.jspdf.jsPDF;
-</script>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
