--- a/listagem.html
+++ b/listagem.html
@@ -1,3 +1,159 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Lista de Membros</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <style>
+    body { padding-top: 70px; }
+    .foto-miniatura {
+      width: 50px;
+      height: 50px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin-right: 10px;
+    }
+    .membro-item {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 10px;
+      border-bottom: 1px solid #ddd;
+    }
+    .info-membro {
+      display: flex;
+      align-items: center;
+      text-decoration: none;
+      color: inherit;
+      flex-grow: 1;
+    }
+    .checkbox-selecao {
+      display: none;
+    }
+  </style>
+</head>
+<body>
+
+<!-- 🔒 Verificação de autenticação -->
+<script type="module">
+  import { checkAuth } from './auth.js';
+  import { isUserAdmin } from './users.js';
+
+  document.addEventListener('DOMContentLoaded', async () => {
+    const user = await checkAuth();
+    if (user && await isUserAdmin()) {
+      document.getElementById('adminMenuItem').style.display = 'block';
+    }
+  });
+</script>
+
+<!-- 🔹 Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">Listagem</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html">Cadastro</a></li>
+        <li class="nav-item"><a class="nav-link active" href="listagem.html">Listagem</a></li>
+        <li class="nav-item"><a class="nav-link" href="aniversariantes.html">Aniversariantes</a></li>
+        <li class="nav-item" id="adminMenuItem" style="display: none;"><a class="nav-link" href="register.html">Cadastrar Usuários</a></li>
+      </ul>
+      <div class="d-flex align-items-center">
+        <span class="navbar-text text-white me-3"><i class="fas fa-user-circle me-1"></i> <span>Carregando...</span></span>
+        <button id="logoutBtn" class="btn btn-sm btn-outline-light">Sair</button>
+      </div>
+    </div>
+  </div>
+</nav>
+
+<!-- 🔹 Conteúdo -->
+<div class="container mt-4">
+
+  <div class="mb-3 d-flex justify-content-between">
+    <div>
+      <button id="btnSelecionar" class="btn btn-secondary">Selecionar Cadastros</button>
+      <button id="btnExportarPDF" class="btn btn-success">Exportar PDF</button>
+    </div>
+    <button id="btnExcluir" class="btn btn-danger d-none">Excluir Selecionados</button>
+  </div>
+
+  <div id="lista-membros" class="list-group"></div>
+</div>
+
+<!-- 🔹 Firebase + lógica -->
+<script type="module">
+  import { db } from './firebase-config.js';
+  import { ref, onValue, remove } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
+
+  const lista = document.getElementById("lista-membros");
+  const btnSelecionar = document.getElementById("btnSelecionar");
+  const btnExcluir = document.getElementById("btnExcluir");
+  let modoSelecao = false;
+  const membrosRef = ref(db, "membros");
+
+  function carregarMembros(data) {
+    lista.innerHTML = "";
+    if (!data) {
+      lista.innerHTML = "<p class='text-center'>Nenhum membro cadastrado.</p>";
+      return;
+    }
+
+    for (const id in data) {
+      const membro = data[id];
+      const item = document.createElement("div");
+      item.className = "list-group-item membro-item";
+
+      item.innerHTML = `
+        <input type="checkbox" class="form-check-input me-2 checkbox-selecao" data-id="${id}">
+        <a href="ficha.html?id=${id}" class="info-membro">
+          <img src="${membro.fotoURL || ''}" class="foto-miniatura" alt="Foto">
+          <div>
+            <div><strong>${membro.nome}</strong></div>
+            <small>${membro.funcao}</small>
+          </div>
+        </a>
+      `;
+
+      lista.appendChild(item);
+    }
+
+    atualizarVisibilidadeCheckboxes();
+  }
+
+  function atualizarVisibilidadeCheckboxes() {
+    const checkboxes = document.querySelectorAll(".checkbox-selecao");
+    checkboxes.forEach(cb => cb.style.display = modoSelecao ? "inline-block" : "none");
+    btnExcluir.classList.toggle("d-none", !modoSelecao);
+    btnSelecionar.textContent = modoSelecao ? "Cancelar Seleção" : "Selecionar Cadastros";
+  }
+
+  btnSelecionar.addEventListener("click", () => {
+    modoSelecao = !modoSelecao;
+    atualizarVisibilidadeCheckboxes();
+  });
+
+  btnExcluir.addEventListener("click", () => {
+    const selecionados = document.querySelectorAll(".checkbox-selecao:checked");
+    if (selecionados.length === 0) return alert("Nenhum cadastro selecionado.");
+    if (!confirm("Deseja excluir os cadastros selecionados?")) return;
+
+    selecionados.forEach(cb => {
+      const id = cb.getAttribute("data-id");
+      remove(ref(db, `membros/${id}`));
+    });
+  });
+
+  onValue(membrosRef, (snapshot) => {
+    const data = snapshot.val();
+    carregarMembros(data);
+  });
+</script>
+
+<!-- 🔹 Exportar PDF -->
 <script>
   document.getElementById("btnExportarPDF").addEventListener("click", () => {
     const doc = new window.jsPDFGlobal({ orientation: "landscape", unit: "mm", format: "a4" });
@@ -90,3 +246,16 @@
     };
   });
 </script>
+
+
+<!-- 🔹 Bibliotecas externas -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
+<script>
+  // Inicializa corretamente jsPDF e autoTable
+  window.jsPDFGlobal = window.jspdf.jsPDF;
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
